# chess-engine

./: CMakeLists.txt
src/: Board.cpp  Board.h  Eval.cpp  Eval.h  MoveGenerator.cpp  MoveGenerator.h  MoveMaker.cpp  MoveMaker.h  main.cpp
tests/: TestMoveGenerator.cpp  TestMoveGenerator.h  TestMoveMaker.cpp  TestMoveMaker.h  TestUtils.cpp  TestUtils.h
utils/: constants.h
